# rust-clamav-client

./: Cargo.toml
.github/workflows/: test.yml
src/: async_std.rs  blocking.rs  lib.rs  lib_async.rs  nonblocking.rs
tests/: clamav_client.rs
