[package]
name = "clamav-client"
version = "1.0.0"
edition = "2021"
rust-version = "1.56.0"
authors = ["Thorsten Blum <thorsten.blum@toblux.com>", "Raui Ghazaleh <rj.ghazaleh@gmail.com>"]
homepage = "https://github.com/toblux/rust-clamav-client"
repository = "https://github.com/toblux/rust-clamav-client"
documentation = "https://docs.rs/clamav-client"
description = "ClamAV client library with optional async suport"
readme = "README.md"
license = "MIT"
keywords = ["clamav", "clamd", "anitvirus", "async", "tokio"]
exclude = ["clamd", ".github"]

[dependencies]
bytes = { version = "1", optional = true }
async-net = {version = "1.7.0", optional = true}
futures-lite = {version = "1.13.0", optional = true}
async-fs = {version = "1.6.0", optional = true}

[dev-dependencies]
async-std = { version = "1.13.0", features = ["attributes"] }
tokio = { version = "1.42.0", default-features = false, features = ["full"] }
tokio-util = { version = "0.7.13", features = ["io"] }

[features]
async = ["dep:bytes", "dep:async-net", "dep:futures-lite", "dep:async-fs", ]

[package.metadata.docs.rs]
features = ["async"]
